<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Parking</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="signin">Signin</string>
    <string name="signup">Signup</string>
    <string name="signout">SignOut</string>
    <string name="update">Update</string>
    <string name="account">Account:</string>
    <string name="pssword">Password:</string>
    <string name="phone_number">PhoneNumber:</string>
    <string name="register_account_hint">6&#8211;10 words</string>
    <string name="sex">Sex:</string>
    <string name="male">Male</string>
    <string name="famale">Famale</string>
    <string name="tobe_advertising_man">Sign up as an advertising man</string>
    <string name="agreement">Agreed to user agreement</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="user_info">UserInfo</string>
    <string name="adman_info">AdmanInfo</string>
    <string name="adman_record">Record</string>
    <string name="user_record">Record</string>
    <string name="show_biddings">Biddings</string>
    <string name="show_business">Business</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to </string><!-- <xliff:g id="device_name">%1$s</xliff:g> -->
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="exit">Exit</string>
    <string name="locate">Locate</string>

</resources>
