<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView 
        android:id="@+id/balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="90sp"
        android:gravity="right"
        android:hint="0"
        android:textStyle="italic"
        android:background="@drawable/text_bg"
        />

    <LinearLayout
        android:id="@+id/llayout_user_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

       <Button
            android:id="@+id/btn_user_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_info" />
        <Button
            android:id="@+id/btn_show_biddings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/show_biddings" />
        <Button
            android:id="@+id/btn_show_user_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_record" />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/topfl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@drawable/login_button_nor">
         <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progress_loading" />
     </FrameLayout>

</LinearLayout>